2010-04-06  Dirk Schulze  <krit@webkit.org>

Reviewed by Oliver Hunt.

        SVG/SMIL parse failure on attribute keySplines
        https://bugs.webkit.org/show_bug.cgi?id=37071

        Test: svg/animations/animate-keySplines.html

        The String in 'keySplines' can have multiple spaces between numbers
        and delimiters. The parsing code is inspired by SVGParserUtilities
        and respects this.

        * svg/SVGAnimationElement.cpp:
        (WebCore::parseKeySplines):
2010-04-06  Dirk Schulze  <krit@webkit.org>

        Reviewed by Oliver Hunt.

        SVG/SMIL parse failure on attribute keySplines
        https://bugs.webkit.org/show_bug.cgi?id=37071

        Test correct parsing of keySplines.

        * svg/animations/animate-keySplines-expected.txt: Added.
        * svg/animations/animate-keySplines.html: Added.
        * svg/animations/script-tests/animate-keySplines.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):


Canonical link: https://commits.webkit.org/48433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57140 268f45cc-cd09-0410-ab3c-d52691b4dbfc