WebCore/svg/SVGAnimationElement.cpp
@@ -4,6 +4,7 @@
     Copyright (C) 2007 Eric Seidel <eric@webkit.org>
     Copyright (C) 2008 Apple Inc. All rights reserved.
     Copyright (C) 2009 Cameron McCormack <cam@mcc.id.au>
+    Copyright (C) Research In Motion Limited 2010. All rights reserved.
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Library General Public
@@ -36,9 +37,11 @@
 #include "FloatConversion.h"
 #include "HTMLNames.h"
 #include "MappedAttribute.h"
+#include "PlatformString.h"
 #include "RenderObject.h"
 #include "SVGElementInstance.h"
 #include "SVGNames.h"
+#include "SVGParserUtilities.h"
 #include "SVGURIReference.h"
 #include "SVGUseElement.h"
 #include "XLinkNames.h"
@@ -89,29 +92,52 @@ fail:
 static void parseKeySplines(const String& parse, Vector<UnitBezier>& result)
 {
     result.clear();
-    Vector<String> parseList;
-    parse.split(';', parseList);
-    for (unsigned n = 0; n < parseList.size(); ++n) {
-        Vector<String> parseSpline;
-        parseList[n].split(',', parseSpline);
-        // The spec says the sepator is a space, all tests use commas. Weird.
-        if (parseSpline.size() == 1) 
-            parseList[n].split(' ', parseSpline);
-        if (parseSpline.size() != 4)
-            goto fail;
-        double curveValues[4];
-        for (unsigned i = 0; i < 4; ++i) {
-            String parseNumber = parseSpline[i]; 
-            bool ok;
-            curveValues[i] = parseNumber.toDouble(&ok);
-            if (!ok || curveValues[i] < 0.0 || curveValues[i] > 1.0)
-                goto fail;
+    if (parse.isEmpty())
+        return;
+    const UChar* cur = parse.characters();
+    const UChar* end = cur + parse.length();
+
+    skipOptionalSpaces(cur, end);
+
+    bool delimParsed = false;
+    while (cur < end) {
+        delimParsed = false;
+        float posA = 0.0f;
+        if (!parseNumber(cur, end, posA)) {
+            result.clear();
+            return;
         }
-        result.append(UnitBezier(curveValues[0], curveValues[1], curveValues[2], curveValues[3]));
+
+        float posB = 0.0f;
+        if (!parseNumber(cur, end, posB)) {
+            result.clear();
+            return;
+        }
+
+        float posC = 0.0f;
+        if (!parseNumber(cur, end, posC)) {
+            result.clear();
+            return;
+        }
+
+        float posD = 0.0f;
+        if (!parseNumber(cur, end, posD, false)) {
+            result.clear();
+            return;
+        }
+
+        skipOptionalSpaces(cur, end);
+
+        if (cur < end && *cur == ';') {
+            delimParsed = true;
+            cur++;
+        }
+        skipOptionalSpaces(cur, end);
+
+        result.append(UnitBezier(posA, posB, posC, posD));
     }
-    return;
-fail:
-    result.clear();
+    if (!(cur == end && !delimParsed))
+        result.clear();
 }
 
 void SVGAnimationElement::parseMappedAttribute(MappedAttribute* attr)
